extras/tls-ip-selfsigned/frontend-ingress.yaml
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

######################################################################
# Configure the Ingress to use the FrontendConfig that takes care of
# redirecting HTTP requests to HTTPS
######################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: boa-single-cluster-ip
    # reference the FrontendConfig for HTTP -> HTTPS redirect
    networking.gke.io/v1beta1.FrontendConfig: "boa-frontend-config"
spec:
  tls:
  - secretName: frontend-tls
  backend:
    serviceName: frontend
    servicePort: 80
